# openapi/fountain-life-api.json
@@ -89,6 +89,11 @@
             }
           }
         },
+        "security": [
+          {
+            "bearer": []
+          }
+        ],
         "tags": [
           "alertcheck"
         ]
@@ -1444,6 +1449,9 @@
           },
           "title": {
             "type": "string"
+          },
+          "workspaceId": {
+            "type": "string"
           }
         },
         "required": [
@@ -1455,7 +1463,8 @@
           "role",
           "lastUpdatedDateUtc",
           "sourceCount",
-          "title"
+          "title",
+          "workspaceId"
         ]
       },
       "ListNotebooksResponse": {
