# src/modules/alertcheck/alertcheck.controller.ts
@@ -1,5 +1,5 @@
 import { Controller, Get, UseGuards } from '@nestjs/common';
-import { ApiOkResponse, ApiTags } from '@nestjs/swagger';
+import { ApiBearerAuth, ApiOkResponse, ApiTags } from '@nestjs/swagger';
 import { AuthenticatedUserGuard } from '../auth/authenticated-user.guard';
 import { CurrentUser } from '../auth/current-user.decorator';
 import type { AuthenticatedUser } from '../auth/models/authenticated-user';
@@ -7,6 +7,7 @@ import { AlertcheckResponse } from './data-contracts/alertcheck-response';
 import { AlertcheckService } from './alertcheck.service';
 
 @ApiTags('alertcheck')
+@ApiBearerAuth()
 @UseGuards(AuthenticatedUserGuard)
 @Controller('alertcheck')
 export class AlertcheckController {
